# bdf2sfd

./: .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  README.md  THANKS  bdf2sfd.1  bdf2sfd.spec  bdftosfd.1
man/: bdf2sfd.1
src/: bdf2sfd.c  bdftosfd.c  config.h  header.c  header.h  parse.c  parse.h  polygon.c  polygon.h  seccomp.h
tests/: spleen-12x24.bdf  spleen-16x32.bdf  spleen-32x64.bdf  spleen-8x16.bdf
